{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 565,
  "lineage": "5e447caf-f1f1-2159-6763-fb47fee877f5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/networkInterfaces/hei-gis-infraint-P-spoke1-nic",
            "internal_domain_name_suffix": "1wh1bjexfjme3aac5ikzorz4jb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "20.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke1-vnet/subnets/hei-gis-infraint-P-Spoke1-subnet"
              }
            ],
            "location": "eastus",
            "name": "hei-gis-infraint-P-spoke1-nic",
            "private_ip_address": "20.0.0.4",
            "private_ip_addresses": [
              "20.0.0.4"
            ],
            "resource_group_name": "hei-gis-infraint-P"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.spoke1-subnet",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke2-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/networkInterfaces/hei-gis-infraint-P-spoke2-nic",
            "internal_domain_name_suffix": "p5k1mnejmoue5cw4csyrqjhzec.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "30.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke2-vnet/subnets/hei-gis-infraint-P-Spoke2-subnet"
              }
            ],
            "location": "eastus",
            "name": "hei-gis-infraint-P-spoke2-nic",
            "private_ip_address": "30.0.0.4",
            "private_ip_addresses": [
              "30.0.0.4"
            ],
            "resource_group_name": "hei-gis-infraint-P"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.spoke2-subnet",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Bastion-pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P-RG/providers/Microsoft.Network/publicIPAddresses/rt-hei-gis-infraint-P-Bastion-Pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.25.120",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "rt-hei-gis-infraint-P-Bastion-Pubip",
            "resource_group_name": "hei-gis-infraint-P-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.FirewallRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P-RG/providers/Microsoft.Network/publicIPAddresses/hei-gis-infraint-P-firewall-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.25.115",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hei-gis-infraint-P-firewall-pubip",
            "resource_group_name": "hei-gis-infraint-P-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.FirewallRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/routeTables/rt-hei-gis-infraint-P-01",
            "location": "eastus",
            "name": "rt-hei-gis-infraint-P-01",
            "resource_group_name": "hei-gis-infraint-P",
            "route": [
              {
                "address_prefix": "30.0.0.0/24",
                "name": "to_20.0.0.0",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Default",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.Firewall",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.FirewallRG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.hub-subnet",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "Route_Table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/routeTables/rt-hei-gis-infraint-P-02",
            "location": "eastus",
            "name": "rt-hei-gis-infraint-P-02",
            "resource_group_name": "hei-gis-infraint-P",
            "route": [
              {
                "address_prefix": "20.0.0.0/24",
                "name": "to_30.0.0.0",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Default",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.Firewall",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.FirewallRG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.hub-subnet",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "BastionSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/26",
            "address_prefixes": [
              "10.0.1.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-hub-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "hei-gis-infraint-P",
            "virtual_network_name": "hei-gis-infraint-P-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "hei-gis-infraint-P",
            "virtual_network_name": "hei-gis-infraint-P-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "20.0.0.0/24",
            "address_prefixes": [
              "20.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke1-vnet/subnets/hei-gis-infraint-P-Spoke1-subnet",
            "name": "hei-gis-infraint-P-Spoke1-subnet",
            "resource_group_name": "hei-gis-infraint-P",
            "virtual_network_name": "hei-gis-infraint-P-Spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "30.0.0.0/24",
            "address_prefixes": [
              "30.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke2-vnet/subnets/hei-gis-infraint-P-Spoke2-subnet",
            "name": "hei-gis-infraint-P-Spoke2-subnet",
            "resource_group_name": "hei-gis-infraint-P",
            "virtual_network_name": "hei-gis-infraint-P-Spoke2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "Spoke1-Associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke1-vnet/subnets/hei-gis-infraint-P-Spoke1-subnet",
            "route_table_id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/routeTables/rt-hei-gis-infraint-P-01",
            "subnet_id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke1-vnet/subnets/hei-gis-infraint-P-Spoke1-subnet"
          },
          "dependencies": [
            "azurerm_firewall.Firewall",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.FirewallRG",
            "azurerm_resource_group.RG",
            "azurerm_route_table.Route_Table",
            "azurerm_subnet.hub-subnet",
            "azurerm_subnet.spoke1-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "Spoke2-Associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke2-vnet/subnets/hei-gis-infraint-P-Spoke2-subnet",
            "route_table_id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/routeTables/rt-hei-gis-infraint-P-02",
            "subnet_id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke2-vnet/subnets/hei-gis-infraint-P-Spoke2-subnet"
          },
          "dependencies": [
            "azurerm_firewall.Firewall",
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.FirewallRG",
            "azurerm_resource_group.RG",
            "azurerm_route_table.Route_Table1",
            "azurerm_subnet.hub-subnet",
            "azurerm_subnet.spoke2-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "896ebbfa-a464-4606-8140-77e8fd527d8b",
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-hub-vnet",
            "location": "eastus",
            "name": "hei-gis-infraint-P-hub-vnet",
            "resource_group_name": "hei-gis-infraint-P",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke1-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.0.0/16"
            ],
            "guid": "a4b08fdd-2a97-4e58-8002-fa1597473e49",
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke1-vnet",
            "location": "eastus",
            "name": "hei-gis-infraint-P-Spoke1-vnet",
            "resource_group_name": "hei-gis-infraint-P",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke2-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "30.0.0.0/16"
            ],
            "guid": "34b6d57f-6389-4fa8-8ade-14b11824f922",
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke2-vnet",
            "location": "eastus",
            "name": "hei-gis-infraint-P-Spoke2-vnet",
            "resource_group_name": "hei-gis-infraint-P",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "Spoke1_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke1-vnet/virtualNetworkPeerings/Spoke1ToHub",
            "name": "Spoke1ToHub",
            "remote_virtual_network_id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-hub-vnet",
            "resource_group_name": "hei-gis-infraint-P",
            "use_remote_gateways": false,
            "virtual_network_name": "hei-gis-infraint-P-Spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "Spoke2_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke2-vnet/virtualNetworkPeerings/Spoke2ToHub",
            "name": "Spoke2ToHub",
            "remote_virtual_network_id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-hub-vnet",
            "resource_group_name": "hei-gis-infraint-P",
            "use_remote_gateways": false,
            "virtual_network_name": "hei-gis-infraint-P-Spoke2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-hub-vnet/virtualNetworkPeerings/hubtospoke1",
            "name": "hubtospoke1",
            "remote_virtual_network_id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke1-vnet",
            "resource_group_name": "hei-gis-infraint-P",
            "use_remote_gateways": false,
            "virtual_network_name": "hei-gis-infraint-P-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-hub-vnet/virtualNetworkPeerings/hubtospoke2",
            "name": "hubtospoke2",
            "remote_virtual_network_id": "/subscriptions/dbeb8347-1964-4c45-b3c0-ffb54d82c093/resourceGroups/hei-gis-infraint-P/providers/Microsoft.Network/virtualNetworks/hei-gis-infraint-P-Spoke2-vnet",
            "resource_group_name": "hei-gis-infraint-P",
            "use_remote_gateways": false,
            "virtual_network_name": "hei-gis-infraint-P-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    }
  ]
}